--- a/content/atom.xml.erb
+++ b/content/atom.xml.erb
@@ -1,7 +1,7 @@
 ---
 title: mgutz.com Syndication
-author_name: Mario Gutierrez
-author_uri: http://mgutz.com
+author_name: Gianluca Scacco
+author_uri: http://web.tiscali.it/gscacco/
 is_hidden: true
 ---
 <%= atom_feed %>
